@@ -31,4 +31,3 @@ Pod::Weaver::PluginBundle::TAPPER = 0
 Pod::Coverage::TrustPod = 0
 Test::Pod::Coverage = 0
 
-[Test::Compile]
